--- a/NLP_S7_Assignment.ipynb
+++ b/NLP_S7_Assignment.ipynb
@@ -7,8 +7,6 @@
       "provenance": [],
       "collapsed_sections": [
         "0z5S54YvQD30",
-        "EmefzbZPQzLH",
-        "vye3dw2XROHT",
         "IJlBY6kxRnEz",
         "5dzousIdR3Il",
         "WFZ53_TfSFUS",
@@ -51,7 +49,7 @@
         "from IPython.core.interactiveshell import InteractiveShell\r\n",
         "InteractiveShell.ast_node_interactivity = \"all\""
       ],
-      "execution_count": 2,
+      "execution_count": 40,
       "outputs": []
     },
     {
@@ -71,7 +69,7 @@
         "import torch, torchtext\r\n",
         "from torchtext import data "
       ],
-      "execution_count": 3,
+      "execution_count": 41,
       "outputs": []
     },
     {
@@ -82,10 +80,10 @@
       "source": [
         "\r\n",
         "\r\n",
-        "df_phrases = pd.read_csv('https://raw.githubusercontent.com/veeralakrishna/END/main/Session%207/references/stanfordSentimentTreebank/dictionary.txt', sep='|', header=None)\r\n",
-        "df_labels = pd.read_csv('https://raw.githubusercontent.com/veeralakrishna/END/main/Session%207/references/stanfordSentimentTreebank/sentiment_labels.txt', sep='|')\r\n"
+        "df_phrases = pd.read_csv('https://raw.githubusercontent.com/krishnagorrepati/NLP/main/stanfordSentimentTreebank/dictionary.txt', sep='|', header=None)\r\n",
+        "df_labels = pd.read_csv('https://raw.githubusercontent.com/krishnagorrepati/NLP/main/stanfordSentimentTreebank/sentiment_labels.txt', sep='|')\r\n"
       ],
-      "execution_count": 4,
+      "execution_count": 42,
       "outputs": []
     },
     {
@@ -96,13 +94,13 @@
           "height": 219
         },
         "id": "rVO2CX9uOImY",
-        "outputId": "e7a4a8aa-db57-4a95-83f4-637e7c51b5b7"
+        "outputId": "cf3b72b3-e9df-48c8-fcd1-aacc181ef037"
       },
       "source": [
         "df_phrases.head()\r\n",
         "df_phrases.shape"
       ],
-      "execution_count": 5,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -172,7 +170,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 5
+          "execution_count": 43
         },
         {
           "output_type": "execute_result",
@@ -184,7 +182,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 5
+          "execution_count": 43
         }
       ]
     },
